# roast-bot

./: .gitignore
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/templates/: stream_viewer.html
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/friends/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: header.tsx
frontend/components/ui/: toast.tsx
frontend/lib/: api.ts
raspberry_pi/: README.md  raspi_client.py  raspi_stream.py  requirements.txt  send_video.py  udp_stream.sh
