[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "python-jose>=3.4.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.0",
    "email-validator>=2.2.0",
    "bcrypt>=4.3.0",
    "python-dotenv>=1.1.0",
    "openai>=1.69.0",
    "elevenlabs>=1.55.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
